#7 Fix when some of columns not aligned to top

--- a/angular-small-grid.css
+++ b/angular-small-grid.css
@@ -53,5 +53,9 @@
     bottom: 0;
 }
 
+.angular-small-grid-column {
+    vertical-align: top;
+}
+
 .angular-small-grid-cell {
 }
